RS: Fix overflow of error message

--- a/client/src/app/components/name-field/name-field.component.scss
+++ b/client/src/app/components/name-field/name-field.component.scss
@@ -6,6 +6,9 @@
 
 }
 
+.alert span {
+    font-size: 0.95em;
+}
 
  mat-form-field, input {
     width: 100%;
